--- a/clientSocket/src/App.css
+++ b/clientSocket/src/App.css
@@ -1,11 +1,10 @@
 /* Main app styles */
 .App {
   text-align: center;
-  background-image: url('/home/pc/MY_app/math-Key/clientSocket/src/Figma2/Group 1849.png');
   background-size: cover;
   color: #ffffff; /* White text color */
   font-family: 'Roboto', sans-serif;
-  /* background-color: #9B9C9E ; */
+  background-color: #000000 ;
   height: 100vh;
 }
 
@@ -249,3 +248,19 @@
 .logo-img {
 
 }
+
+.Latex-field {
+
+  align-items: center;
+  justify-content: center;
+  background: #4F46BB;
+  color: white;
+  /* position: absolute; */
+  cursor: pointer;
+  /* perspective: 800px; */
+  transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: Plus Jakarta sans-serif;
+}
+
